Port to 26.3 - Add block tag `orefarmingdevice:devices`