@@ -3,49 +3,30 @@ package com.github.iunius118.orefarmingdevice.data;
 import com.github.iunius118.orefarmingdevice.loot.OFDeviceLootTables;
 import com.github.iunius118.orefarmingdevice.world.level.block.ModBlocks;
 import com.google.common.collect.ImmutableList;
-import net.minecraft.core.HolderLookup;
-import net.minecraft.core.Registry;
-import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.data.loot.LootTableSubProvider;
-import net.minecraft.data.loot.packs.VanillaLootTableProvider;
-import net.minecraft.resources.ResourceKey;
-import net.minecraft.util.ProblemReporter;
 import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.ValidationContextSource;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
-import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.minecraft.world.level.storage.loot.providers.number.ints.ContextIntProviders;
 
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.BiConsumer;
 import java.util.stream.Stream;
 
 public class ModLootTableProvider extends LootTableProvider {
-    public ModLootTableProvider(PackOutput packOutput, CompletableFuture<HolderLookup.Provider> lookup) {
-        super(packOutput, Set.of(), VanillaLootTableProvider.create(packOutput, lookup).getTables(), lookup);
-    }
-
-    @Override
-    public List<LootTableProvider.SubProviderEntry> getTables() {
-        return ImmutableList.of(
+    public ModLootTableProvider() {
+        super(Set.of(), List.of(
                 new LootTableProvider.SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK),
                 new LootTableProvider.SubProviderEntry(ModDeviceLootTables::new, LootContextParamSets.EMPTY)
-        );
-    }
-
-    @Override
-    protected void validate(Registry<LootTable> map, ValidationContextSource validationcontext, ProblemReporter report) {
-        // Do not validate against all registered loot tables
+        ));
     }
 
     private static class ModBlockLootTables extends BlockLootSubProvider {
@@ -56,8 +37,8 @@ public class ModLootTableProvider extends LootTableProvider {
                 ModBlocks.COBBLESTONE_DEVICE_0
         ).collect(ImmutableList.toImmutableList());
 
-        public ModBlockLootTables(HolderLookup.Provider provider) {
-            super(Set.of(), FeatureFlags.REGISTRY.allFlags(), provider);
+        public ModBlockLootTables(LootTableSubProvider.Context output) {
+            super(Set.of(), FeatureFlags.REGISTRY.allFlags(), output);
         }
 
         @Override
@@ -71,18 +52,12 @@ public class ModLootTableProvider extends LootTableProvider {
         }
     }
 
-    private static class ModDeviceLootTables implements LootTableSubProvider {
-        private final HolderLookup.Provider provider;
-
-        public ModDeviceLootTables(HolderLookup.Provider lookupProvider) {
-            provider = lookupProvider;
-        }
-
+    private record ModDeviceLootTables(LootTableSubProvider.Context output) implements LootTableSubProvider {
         @Override
-        public void generate(BiConsumer<ResourceKey<LootTable>, LootTable.Builder> consumer) {
+        public void run() {
             // OF Device
-            consumer.accept(OFDeviceLootTables.DEVICE_0.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_0.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.STONE).setWeight(892).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.COAL_ORE).setWeight(50))
                             .add(LootItem.lootTableItem(Blocks.COPPER_ORE).setWeight(24))
@@ -91,8 +66,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_0_DEEP.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_0_DEEP.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE).setWeight(976).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COAL_ORE).setWeight(3))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COPPER_ORE).setWeight(6))
@@ -101,8 +76,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_0_NETHER.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_0_NETHER.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Items.NETHER_BRICK).setWeight(960).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.NETHER_QUARTZ_ORE).setWeight(30))
                             .add(LootItem.lootTableItem(Blocks.NETHER_GOLD_ORE).setWeight(10))
@@ -110,8 +85,8 @@ public class ModLootTableProvider extends LootTableProvider {
             );
 
             // OF Device Mod 1
-            consumer.accept(OFDeviceLootTables.DEVICE_1.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_1.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.STONE).setWeight(882).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.COAL_ORE).setWeight(50))
                             .add(LootItem.lootTableItem(Blocks.COPPER_ORE).setWeight(24))
@@ -123,8 +98,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_1_DEEP.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_1_DEEP.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE).setWeight(941).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COAL_ORE).setWeight(3))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COPPER_ORE).setWeight(6))
@@ -136,8 +111,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_1_NETHER.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_1_NETHER.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Items.NETHER_BRICK).setWeight(960).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.NETHER_QUARTZ_ORE).setWeight(30))
                             .add(LootItem.lootTableItem(Blocks.NETHER_GOLD_ORE).setWeight(10))
@@ -145,8 +120,8 @@ public class ModLootTableProvider extends LootTableProvider {
             );
 
             // OF Device Mod 2
-            consumer.accept(OFDeviceLootTables.DEVICE_2.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_2.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.STONE).setWeight(839).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.COAL_ORE).setWeight(50))
                             .add(LootItem.lootTableItem(Blocks.COPPER_ORE).setWeight(47))
@@ -160,8 +135,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_2_DEEP.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_2_DEEP.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE).setWeight(931).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COAL_ORE).setWeight(3))
                             .add(LootItem.lootTableItem(Blocks.DEEPSLATE_COPPER_ORE).setWeight(11))
@@ -175,8 +150,8 @@ public class ModLootTableProvider extends LootTableProvider {
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_2_NETHER.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_2_NETHER.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Items.NETHER_BRICK).setWeight(959).setQuality(-240))
                             .add(LootItem.lootTableItem(Blocks.NETHER_QUARTZ_ORE).setWeight(30))
                             .add(LootItem.lootTableItem(Blocks.NETHER_GOLD_ORE).setWeight(10))
@@ -185,51 +160,51 @@ public class ModLootTableProvider extends LootTableProvider {
             );
 
             // OF Device Mod 2 with OF C Feeder T
-            consumer.accept(OFDeviceLootTables.DEVICE_2_FEED_TNT.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_2_FEED_TNT.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.COBBLESTONE).setWeight(839).setQuality(-240)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.COAL).setWeight(50)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Blocks.RAW_COPPER_BLOCK).setWeight(47))
                             .add(LootItem.lootTableItem(Blocks.LAPIS_BLOCK).setWeight(4)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(2))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(2))))
                             .add(LootItem.lootTableItem(Items.RAW_IRON).setWeight(30)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.RAW_GOLD).setWeight(20)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Blocks.REDSTONE_BLOCK).setWeight(5)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(2))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(2))))
                             .add(LootItem.lootTableItem(Items.DIAMOND).setWeight(1)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.EMERALD).setWeight(2)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.AMETHYST_SHARD).setWeight(2)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                     )
             );
 
-            consumer.accept(OFDeviceLootTables.DEVICE_2_FEED_TNT_DEEP.getResourceKey(),
-                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ConstantValue.exactly(1))
+            output.accept(OFDeviceLootTables.DEVICE_2_FEED_TNT_DEEP.getResourceKey(),
+                    LootTable.lootTable().withPool(LootPool.lootPool().setRolls(ContextIntProviders.exactly(1))
                             .add(LootItem.lootTableItem(Blocks.COBBLED_DEEPSLATE).setWeight(931).setQuality(-240)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.COAL).setWeight(3)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Blocks.RAW_COPPER_BLOCK).setWeight(11))
                             .add(LootItem.lootTableItem(Blocks.LAPIS_BLOCK).setWeight(4)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(2))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(2))))
                             .add(LootItem.lootTableItem(Items.RAW_IRON).setWeight(11)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.RAW_GOLD).setWeight(6)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Blocks.REDSTONE_BLOCK).setWeight(20)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(2))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(2))))
                             .add(LootItem.lootTableItem(Items.DIAMOND).setWeight(9)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.EMERALD).setWeight(1)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                             .add(LootItem.lootTableItem(Items.AMETHYST_SHARD).setWeight(4)
-                                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(3))))
+                                    .apply(SetItemCountFunction.setCount(ContextIntProviders.exactly(3))))
                     )
             );
         }
